# hs-base64-encode-lines

./: CHANGELOG.md  Dockerfile  Dockerfile.wasi.txt  README.md  build-img.sh  example.sh  hs-base64-encode-lines.cabal  opt.sh
app/: Main.hs
