cabal-version:      3.14
name:               hs-base64-encode-lines
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror

executable hs-base64-encode-lines
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.14 && < 5,
        bytestring >= 0.10 && < 0.12,
        base64-bytestring >= 1.0 && < 1.4,
        text >= 2.0 && < 2.3
    hs-source-dirs:   app
    default-language: GHC2021
